--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container header-flex">
         <nav class="navigation"> 
             <a class="logo link" href="./index.html">
@@ -53,13 +53,13 @@
                 </li>
             </ul>
             </div>
-    </header>
+    </header> -->
     <main class="main">
         <section class="hero section">
             <h1 class="hero__text">Ефективні рішення для вашого бізнесу</h1>
             <button class="hero__btn link" type="button" data-modal-open>Замовити послугу</button>
         </section>
-        <section class="benefits section">
+        <!-- <section class="benefits section">
             <div class="container">
             <h2 class="visually-hidden">Переваги</h2>
              <ul class="benefits__list list">
@@ -81,8 +81,8 @@
                  </li>
              </ul>
             </div>
-        </section>
-        <section class="activity">
+        </section> -->
+        <!-- <section class="activity">
             <div class="container">
             <h2 class="activity__title">Чим ми займаємося</h2>
             <ul class="activity__list list">
@@ -100,8 +100,8 @@
                 </li>
             </ul>
             </div>
-        </section>
-        <section class="team section">
+        </section> -->
+        <!-- <section class="team section">
             <div class="container">
             <h2 class="team__title">Наша команда</h2>
             <ul class="team__list list">
@@ -247,8 +247,8 @@
                 </li>
             </ul>
             </div>
-        </section>
-        <section class="clients section">
+        </section> -->
+        <!-- <section class="clients section">
             <div class="container">
             <h2 class="clients__title">Постійні клієнти</h2>
             <ul class="clients__list list">
@@ -296,9 +296,9 @@
                 </li>
             </ul>
             </div>
-        </section>
+        </section> -->
     </main>
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="container">
         <ul class="footer__main-list list">
             <li class="footer__main-item">
@@ -367,7 +367,7 @@
 
         </ul>
     </div>
-</footer>
+</footer> -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal__btn" data-modal-close>
