--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container header-flex">
             <nav class="navigation">
                 <a class="logo link" href="./index.html">
@@ -54,7 +54,7 @@
                 </li>
             </ul>
         </div>
-    </header>
+    </header> -->
     <main>
         <section class="section">
             <div class="container">
