--- a/portfolio.html
+++ b/portfolio.html
@@ -16,45 +16,92 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <body>
-    <!-- <header class="header">
-        <div class="container header-flex">
-            <nav class="navigation">
-                <a class="logo link" href="./index.html">
-                    <span class="logo__web logo__web--blue">Web</span><span
-                        class="logo__studio logo__studio--black">Studio</span>
-                </a>
-                <ul class="navigation__list list">
-                    <li class="navigation-item">
-                        <a class="navigation__link link" href="./index.html">Студія</a>
-                    </li>
-                    <li class="navigation-item">
-                        <a class="navigation__link current link" href="./portfolio.html">Портфоліо</a>
-                    </li>
-                    <li class="navigation-item">
-                        <a class="navigation__link link" href="">Контакти</a>
-                    </li>
-                </ul>
-            </nav>
-            <ul class="contacts list">
-                <li class="contacts__item">
-                    <a class="contacts__link link" href="mailto:info@devstudio.com">
-                        <svg class="contacts__icon" width="16" height="12">
-                            <use href="./images/icons.svg#icon-mail">
-                            </use>
-                        </svg>
-                        info@devstudio.com</a>
+<header class="header">
+    <div class="container header-flex">
+        <nav class="navigation">
+            <a class="logo link" href="./index.html">
+                <span class="logo__web logo__web--blue">Web</span><span
+                    class="logo__studio logo__studio--black">Studio</span>
+            </a>
+            <ul class="navigation__list list">
+                <li class="navigation-item">
+                    <a class="navigation__link link" href="./index.html">Студія</a>
                 </li>
-                <li class="contacts__item">
-                    <a class="contacts__link link" href="tel:+380961111111">
-                        <svg class="contacts__icon" width="10" height="16">
-                            <use href="./images/icons.svg#icon-smartphone">
-                            </use>
-                        </svg>
-                        +38 096 111 11 11</a>
+                <li class="navigation-item">
+                    <a class="navigation__link current link" href="./portfolio.html">Портфоліо</a>
+                </li>
+                <li class="navigation-item">
+                    <a class="navigation__link link" href="">Контакти</a>
+                </li>
+            </ul>
+        </nav>
+        <button type="button" class="header__menu-btn js-open-menu">
+            <svg class="header__menu-svg" width="40" height="40">
+                <use href="./images/icons.svg#icon-menu-btn"></use>
+            </svg>
+        </button>
+        <ul class="contacts list">
+            <li class="contacts__item">
+                <a class="contacts__link link" href="mailto:info@devstudio.com">
+                    <svg class="contacts__icon" width="16" height="12">
+                        <use href="./images/icons.svg#icon-mail">
+                        </use>
+                    </svg>
+                    info@devstudio.com</a>
+            </li>
+            <li class="contacts__item">
+                <a class="contacts__link link" href="tel:+380961111111">
+                    <svg class="contacts__icon" width="10" height="16">
+                        <use href="./images/icons.svg#icon-smartphone">
+                        </use>
+                    </svg>
+                    +38 096 111 11 11</a>
+            </li>
+        </ul>
+    </div>
+    <div class="mob-menu js-menu-container">
+        <div class="mob-menu__container">
+            <button class="mob-menu__close-btn js-close-menu" type="button">
+                <svg class="mob-menu__close-svg" width="40" height="40">
+                    <use class="mob-menu__close-icon" href="./images/icons.svg#icon-close-btn"></use>
+                </svg>
+            </button>
+            <ul class="mob-menu__nav-list list">
+                <li class="mob-menu__nav-item">
+                    <a href="./index.html" class="mob-menu__nav-link link">Студія</a>
+                </li>
+                <li class="mob-menu__nav-item">
+                    <a href="./portfolio.html" class="mob-menu__nav-link link">Портфоліо</a>
+                </li>
+                <li class="mob-menu__nav-item">
+                    <a href="#" class="mob-menu__nav-link link">Контакти</a>
+                </li>
+            </ul>
+            <ul class="mob-menu__contact-list list">
+                <li class="mob-menu__contact-item">
+                    <a class="mob-menu__contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+                <li class="mob-menu__contact-item">
+                    <a class="mob-menu__contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+            </ul>
+            <ul class="mob-menu__soc-list list">
+                <li class="mob-menu__soc-item">
+                    <a href="#" class="mob-menu__soc-link link">Instagram</a>
+                </li>
+                <li class="mob-menu__soc-item">
+                    <a href="#" class="mob-menu__soc-link link">Twitter</a>
+                </li>
+                <li class="mob-menu__soc-item">
+                    <a href="#" class="mob-menu__soc-link link">Facebook</a>
+                </li>
+                <li class="mob-menu__soc-item">
+                    <a href="#" class="mob-menu__soc-link link">LinkedIn</a>
                 </li>
             </ul>
         </div>
-    </header> -->
+    </div>
+</header>
     <main>
         <section class="section">
             <div class="container">
