--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="container header-flex">
         <nav class="navigation"> 
             <a class="logo link" href="./index.html">
@@ -34,6 +34,11 @@
                 </li>
             </ul>
         </nav>
+        <button type="button" class="header__menu-btn js-open-menu">
+            <svg class="header__menu-svg" width="40" height="40">
+                <use href="./images/icons.svg#icon-menu-btn"></use>
+            </svg>
+        </button>
             <ul class="contacts list">
                 <li class="contacts__item">
                     <a class="contacts__link link" href="mailto:info@devstudio.com">
@@ -52,8 +57,50 @@
                         +38 096 111 11 11</a>
                 </li>
             </ul>
+        </div>
+        <div class="mob-menu js-menu-container">
+            <div class="mob-menu__container">
+                <button class="mob-menu__close-btn js-close-menu" type="button">
+                    <svg class="mob-menu__close-svg" width="40" height="40">
+                        <use class="mob-menu__close-icon" href="./images/icons.svg#icon-close-btn"></use>
+                    </svg>
+                </button>
+                <ul class="mob-menu__nav-list list">
+                    <li class="mob-menu__nav-item">
+                        <a href="./index.html" class="mob-menu__nav-link link">Студія</a>
+                    </li>
+                    <li class="mob-menu__nav-item">
+                        <a href="./portfolio.html" class="mob-menu__nav-link link">Портфоліо</a>
+                    </li>
+                    <li class="mob-menu__nav-item">
+                        <a href="#" class="mob-menu__nav-link link">Контакти</a>
+                    </li>
+                </ul>
+                <ul class="mob-menu__contact-list list">
+                    <li class="mob-menu__contact-item">
+                        <a class="mob-menu__contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                    <li class="mob-menu__contact-item">
+                        <a class="mob-menu__contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                </ul>
+                <ul class="mob-menu__soc-list list">
+                    <li class="mob-menu__soc-item">
+                        <a href="#" class="mob-menu__soc-link link">Instagram</a>
+                    </li>
+                    <li class="mob-menu__soc-item">
+                        <a href="#" class="mob-menu__soc-link link">Twitter</a>
+                    </li>
+                    <li class="mob-menu__soc-item">
+                        <a href="#" class="mob-menu__soc-link link">Facebook</a>
+                    </li>
+                    <li class="mob-menu__soc-item">
+                        <a href="#" class="mob-menu__soc-link link">LinkedIn</a>
+                    </li>
+                </ul>
             </div>
-    </header> -->
+        </div>
+    </header>
     <main class="main">
         <section class="hero container">
             <h1 class="hero__text">Ефективні рішення для вашого бізнесу</h1>
@@ -355,8 +402,8 @@
     </main>
 <footer class="footer">
     <div class="container">
-        <ul class="footer__main-list list">
-            <li class="footer__main-item">
+        <div class="footer__main-list">
+            <div class="footer__main-item">
                 <a class="logo link" href="./index.html">
                     <span class="logo__web logo__web--blue">Web</span><span class="logo__studio logo__studio--wite">Studio</span>
                 </a>
@@ -369,9 +416,9 @@
                         <a class="footer__link link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
-            </li>
-            <li class="footer__main-item">
-                <h3 class="footer__soc-title">приєднуйтесь</h3>
+            </div>
+            <div class="footer__main-item">
+                <p class="footer__soc-title">приєднуйтесь</p>
                 <ul class="socials list">
                     <li class="socials__item socials__item--bg-gray">
                         <a class="socials__link socials__link--bg-gray link" href="">
@@ -402,9 +449,9 @@
                         </a>
                     </li>
                 </ul>
-            </li>
-            <li class="footer__main-item">
-                <h3 class="footer__soc-title">Підпишіться на розсилку</h3>
+            </div>
+            <div class="footer__main-item">
+                <p class="footer__soc-title">Підпишіться на розсилку</p>
                 <form class="subscribe">
                     <input type="email" class="subscribe__input" name="user-sub" placeholder="E-mail"
                         id="user-sub" />
@@ -417,10 +464,10 @@
                     </button>
 
                 </form>
-            </li>
+            </div>
 
 
-        </ul>
+        </div>
     </div>
 </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -498,5 +545,6 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mob-menu.js"></script>
 </body>
 </html>
