--- a/index.html
+++ b/index.html
@@ -355,42 +355,42 @@
             <h2 class="clients__title">Постійні клієнти</h2>
             <ul class="clients__list list">
                 <li class="clients__item">
-                    <a class="clients__link link" href="">
+                    <a class="clients__link link" href="#">
                         <svg class="clients__icon" width="106" height="60">
                             <use href="./images/icons.svg#icon-Logo1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="clients__item">
-                    <a class="clients__link link" href="">
+                    <a class="clients__link link" href="#">
                         <svg class="clients__icon" width="106" height="60">
                             <use href="./images/icons.svg#icon-Logo2"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="clients__item">
-                    <a class="clients__link link" href="">
+                    <a class="clients__link link" href="#">
                         <svg class="clients__icon" width="106" height="60">
                             <use href="./images/icons.svg#icon-Logo3"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="clients__item">
-                    <a class="clients__link link" href="">
+                    <a class="clients__link link" href="#">
                         <svg class="clients__icon" width="106" height="60">
                             <use href="./images/icons.svg#icon-Logo4"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="clients__item">
-                <a class="clients__link link" href="">
+                <a class="clients__link link" href="#">
                     <svg class="clients__icon" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logo5"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="clients__item">
-                <a class="clients__link link" href="">
+                <a class="clients__link link" href="#">
                     <svg class="clients__icon" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logo6"></use>
                     </svg>
