--- a/portfolio.html
+++ b/portfolio.html
@@ -126,17 +126,21 @@
             <h2 class="visually-hidden">Проекти</h2>
             <ul class="projects list">
                 <li class="projects__item">
-                    <div class="projects__wrap">
+                    <a class="projects__link link" href="#">
+                        <div class="projects__wrap">
                         <img class="projects__img" width="370" src="./images/project1.jpeg" alt="Проект1">
-                        <p class="projects__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                        вичерпні відомості про компанію чи приватну особу.</p>
+                        <p class="projects__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                            дозволить відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="projects__title-sign">
-                    <h3 class="projects__title">Технокряк</h3>
-                    <p class="projects__sign">Веб-сайт</p>
+                        <h3 class="projects__title">Технокряк</h3>
+                        <p class="projects__sign">Веб-сайт</p>
                     </div>
+                </a>     
                 </li>
                 <li class="projects__item">
+                    <a class="projects__link link" href="#">
                     <div class="projects__wrap">
                         <img class="projects__img" width="370" src="./images/project2.jpeg" alt="Проект2">
                         <p class="projects__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -146,8 +150,10 @@
                     <h3 class="projects__title">Постер New Orlean vs Golden Star</h3>
                     <p class="projects__sign">Дизайн</p>
                     </div>
+                    </a>
                 </li>
                 <li class="projects__item">
+                    <a class="projects__link link" href="#">
                     <div class="projects__wrap">
                         <img class="projects__img" width="370" src="./images/project3.jpeg" alt="Проект3">
                         <p class="projects__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -156,9 +162,11 @@
                     <div class="projects__title-sign">
                     <h3 class="projects__title">Ресторан Seafood</h3>
                     <p class="projects__sign">Додаток</p>
-                    </div>      
+                    </div>   
+                    </a>
                 </li>
                 <li class="projects__item">
+                    <a class="projects__link link" href="#">
                     <div class="projects__wrap">
                         <img class="projects__img" width="370" src="./images/project4.jpeg" alt="Проект4">
                         <p class="projects__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -168,8 +176,10 @@
                     <h3 class="projects__title">Проект Prime</h3>
                     <p class="projects__sign">Маркетинг</p>
                     </div>
+                    </a>
                 </li>
                 <li class="projects__item">
+                    <a class="projects__link link" href="#">
                     <div class="projects__wrap">
                         <img class="projects__img" width="370" src="./images/project5.jpeg" alt="Проект5">
                         <p class="projects__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -179,8 +189,13 @@
                     <h3 class="projects__title">Проект Boxes</h3>
                     <p class="projects__sign">Додаток</p>
                     </div>
+                    </a>
+
                 </li>
+               
+
                 <li class="projects__item">
+                    <a class="projects__link link" href="#">
                     <div class="projects__wrap">
                         <img class="projects__img" width="370" src="./images/project6.jpeg" alt="Проект6">
                         <p class="projects__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -190,8 +205,10 @@
                     <h3 class="projects__title">Inspiration has no Borders</h3>
                     <p class="projects__sign">Веб-сайт</p>
                     </div>
+                    </a>
                 </li>
                 <li class="projects__item">
+                    <a class="projects__link link" href="#">
                     <div class="projects__wrap">
                         <img class="projects__img" width="370" src="./images/project7.jpeg" alt="Проект7">
                         <p class="projects__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -201,8 +218,10 @@
                     <h3 class="projects__title">Видання Limited Edition</h3>
                     <p class="projects__sign">Дизайн</p>
                     </div>
+                    </a>
                 </li>
                 <li class="projects__item">
+                    <a class="projects__link link" href="#">
                     <div class="projects__wrap">
                         <img class="projects__img" width="370" src="./images/project8.jpeg" alt="Проект8">
                         <p class="projects__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -212,8 +231,10 @@
                     <h3 class="projects__title">Проект LAB</h3>
                     <p class="projects__sign">Маркетинг</p>
                     </div>
+                    </a>
                 </li>
                 <li class="projects__item">
+                    <a class="projects__link link" href="#">
                     <div class="projects__wrap">
                         <img class="projects__img" width="370" src="./images/project9.jpeg" alt="Проект9">
                         <p class="projects__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -223,6 +244,7 @@
                     <h3 class="projects__title">Growing Business</h3>
                     <p class="projects__sign">Додаток</p>
                     </div>
+                    </a>
                 </li>
             </ul>
             </div>
